--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,13 +1,25 @@
 <footer class="footer">
   <div class="footer__inner">
     {{ if $.Site.Copyright }}
-      <div class="copyright copyright--user">{{ $.Site.Copyright | safeHTML }}</div>
+    <div class="copyright copyright--user">{{ $.Site.Copyright | safeHTML }}</div>
     {{else}}
-      {{ partial "logo.html" . }}
-      <div class="copyright">
-        <span>© {{ now.Year }} Powered by <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a></span>
-        <span>Theme created by <a href="https://twitter.com/panr" target="_blank" rel="noopener">panr</a></span>
-      </div>
+    {{ partial "logo.html" . }}
+    <div class="copyright">
+      <span>
+        <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">
+          <img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" />
+        </a>
+      </span>
+      <span>{{- with (not (in (.Site.Language.Get "disableKinds") "RSS")) }} <a
+          href="{{ "posts/index.xml" | absLangURL }}" target="_blank" title="rss"><svg
+            xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+            class="feather feather-rss">
+            <path d="M4 11a9 9 0 0 1 9 9"></path>
+            <path d="M4 4a16 16 0 0 1 16 16"></path>
+            <circle cx="5" cy="19" r="1"></circle>
+          </svg></a>{{ end }}</span>
+    </div>
     {{end}}
   </div>
 </footer>
