--- a/layouts/archive/list.html
+++ b/layouts/archive/list.html
@@ -20,9 +20,16 @@
               href="{{ .Permalink }}">{{ .Title | markdownify }}</a>
           </h3>
           <div class="archive__post-meta">
-            <span class="archive__post-date">
+            <!-- <span class="archive__post-date">
               {{ .Date.Format ($.Site.Params.DateFormatList | default "2006-01-02") }}
+            </span> -->
+            {{ if .Params.tags }}
+            <span class="post-tags">
+              {{ range .Params.tags }}
+              #<a href="{{ (urlize (printf "tags/%s" . )) | absURL }}/">{{ . }}</a>&nbsp;
+              {{ end }}
             </span>
+            {{ end }}
             {{ with .Params.Author }}
             <span class="archive__post-author">—
               {{ $.Site.Params.WrittenBy | default "Written by" }}
